Refactors small and buggy UI components and widgets (dialog, switching toggle, video cover, toggle blocks, general alignment and positioning).

--- a/components/_components.degree-requirements.scss
+++ b/components/_components.degree-requirements.scss
@@ -5,14 +5,36 @@
 .entry-req-container {
     padding-bottom: 1.5em;
     @include outer-container;
+
+    // TODO: Refactor!
+    > .block:first-child {
+        margin-bottom: -2em;
+    }
+
+    > .block-container {
+        .block {
+            padding-bottom: 0;
+        }
+
+        .block:last-child {
+            padding-bottom: $base-padding;
+        }
+    }
+
+    .form {
+        margin-bottom: $base-margin;
+    }
+
     .degree-req {
         @include fill-parent();
         @include row(table);
+
         .req-wrap {
             @include media ($tablet-and-bigger) {
                 @include span-columns(12);
             }
         }
+
         .btn-wrap {
             @include media ($tablet-and-bigger) {
                 @include span-columns(4);
@@ -116,7 +138,7 @@
     .form { margin-bottom: 1em; }
 
     .majors-list {
-        margin: 1.3em 0 0.5em 0;
+        margin: 1em 0 .5em 0;
 
         .study-intro, .req-container { margin-bottom: 0; padding-bottom: 0 }
     }
@@ -131,6 +153,10 @@
 
     .major {
         margin-bottom: 1.2em;
+
+        .toggle-header {
+            padding: .45em 0;
+        }
 
         &:first-child{ margin-top: 1.1em; }
         &:last-child {
