--- a/objects/_objects.dialogs.scss
+++ b/objects/_objects.dialogs.scss
@@ -76,7 +76,7 @@ $dialog-padding:   1em;
     h1, h2, h3 { line-height: 1.05; }
 
 
-    @include media( $desktop-and-bigger ){
+    @include media( $desktop-and-bigger ) {
 
         .two-col-layout.block-container .block {
             &:first-child, &:last-child{
@@ -93,15 +93,17 @@ $dialog-padding:   1em;
         width: 70%;
     }
 
-    .note {
+    .content-simple .note {
+        margin-top: .75em;
         font-size: .9em;
-        line-height: 1.2;
+        line-height: 1.3;
     }
 
     .btn { white-space: inherit; }
 
     .form-group {
-        margin-bottom: 1.5em;
+        margin-bottom: 1em;
+
         > label { margin-right: .3em; }
     }
 
@@ -152,7 +154,7 @@ $dialog-padding:   1em;
         width: 30px;
       }
 
-      @include hoverify(){
+      @include hoverify() {
           &:before {
               color: #777;
           }
@@ -224,7 +226,7 @@ $dialog-padding:   1em;
       }
     }
 
-    @include media( $tablet-and-smaller ){
+    @include media( $tablet-and-smaller ) {
         padding: 1em;
 
         .abstract {
